@startuml
class ChatProtocolHelper <<static>> {
    + {static} Deserialize(rawData:string) : ChatProtocolDataPackage?
}
class ChatProtocolDataPackage {
    + ChatProtocolDataPackage(payloadType:ChatProtocolPayloadTypes, payload:string)
    + Timestamp : string <<get>> <<init>>
    + Payload : string <<get>> <<init>>
    + ToJson() : string
}
ChatProtocolDataPackage --> "ChatProtocolVersion" Version
ChatProtocolDataPackage --> "PayloadType" ChatProtocolPayloadTypes
enum ChatProtocolPayloadTypes {
    Message,
    User,
    MessageReceivedConfirmation,
    FileTransfer,
}
@enduml
